springboot-app/springboot-jib-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-jib
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      springboot-jib: web
  template:
    metadata:
      labels:
        springboot-jib: web
    spec:
      containers:
      - name: springboot-jib
        image: jbrinnand/springjib-skaffold-arm64-0_0_1:8895594-dirty
      imagePullSecrets:
        - name: deepcred

---

apiVersion: v1
kind: Service
metadata:
  name: springboot-jib-service
  namespace: default
spec:
  type: NodePort
  selector:
    springboot-jib: web
  ports:
  - port: 9058
    targetPort: 8080
