springboot-app/springboot-jib-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-jib-ingress
  namespace: default
  annotations:
 
spec:
  rules:
  - host: springboot-jib.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-jib-service
            port:
              number: 9058
